<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_EL2809" Id="{b4247617-0c63-4291-9ee1-02e0a92b28da}">
    <Declaration><![CDATA[TYPE ST_EL2809 :
STRUCT
	//--------------------------------------------------------------------------------------------------------
	sTerminalName                                           :   STRING(200):= 'EL2809 | 16-Channel Digital Output';
	//=============================================================================================================
	// TERMINAL - EL2809	16-Channel Digital Output Terminal	 (Term ...)
	qiEL2809_Ch1 							AT %Q*			: 	BOOL;	// EL2809 channel 1
	qiEL2809_Ch2							AT %Q* 			: 	BOOL;	// EL2809 channel 2
	qiEL2809_Ch3             				AT %Q*	 		: 	BOOL;	// EL2809 channel 3 			
	qiEL2809_Ch4      						AT %Q*	 		: 	BOOL;	// EL2809 channel 4 
	qiEL2809_Ch5  							AT %Q*	 		: 	BOOL;	// EL2809 channel 5
	qiEL2809_Ch6 							AT %Q*	 		: 	BOOL;	// EL2809 channel 6 	
	qiEL2809_Ch7         		    		AT %Q*			: 	BOOL;	// EL2809 channel 7	
	qiEL2809_Ch8							AT %Q*	 		: 	BOOL;	// EL2809 channel 8	
	qiEL2809_Ch9                 			AT %Q*          :   BOOL;   // EL2809 channel 9
	qiEL2809_Ch10             				AT %Q*          :   BOOL;   // EL2809 channel 10   	
	qiEL2809_Ch11     						AT %Q*	 		: 	BOOL;	// EL2809 channel 11	
	qiEL2809_Ch12   						AT %Q*	 		: 	BOOL;	// EL2809 channel 12 
    qiEL2809_Ch13 			        		AT %Q*	 		: 	BOOL;	// EL2809 channel 13 
	qiEL2809_Ch14                 			AT %Q*	 		: 	BOOL;	// EL2809 channel 14 
	qiEL2809_Ch15							AT %Q*	 		: 	BOOL;	// EL2809 channel 15 
    qiEL2809_Ch16         		        	AT %Q*	 		: 	BOOL;	// EL2809 channel 16  
	
	stTerminalInfo											: 	ST_Terminal_Info;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>