<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_StationCMD" Id="{ff78f0ef-9fa8-4e6f-9d5c-03e88c7448b6}">
    <Declaration><![CDATA[TYPE ST_StationCMD :
STRUCT
//Universal Module CMD Struct

    bEnable       			:BOOL;	// Request module to activate devices
	bExecute				:BOOL;	// Request module to execute CMD
    bReset        			:BOOL;	// Request module to reset error or state
    bAbort        			:BOOL;	// Emergency stop or cancel current task
	bReady					:BOOL;	// Get ready
	bEndCycle				:BOOL; // End cycle
	
	nTaskID       			:UINT;	// Request a Task by its ID	
    bManualMode   			:BOOL;	// Request Manual Mode(jog mode)
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>