<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_UserLog" Id="{a2552ed3-e169-497b-b34b-850409e3275f}">
    <Declaration><![CDATA[TYPE ST_UserLog :
STRUCT
	
	sUser				: STRING;
	sGroup				: STRING;
	sDate				: STRING;
	sTime				: STRING;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>