<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_ActiveEventsHMI" Id="{19d3e718-4d8c-4ac9-bf1f-d70ec72d6923}">
    <Declaration><![CDATA[TYPE ST_ActiveEventsHMI :
STRUCT
	sActiveEvents					: T_MaxSTring;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>